--- a/config/costmap_common_params.yaml
+++ b/config/costmap_common_params.yaml
@@ -5,13 +5,10 @@ transform_tolerance: 0.2
 robot_radius: 0.3
 inflation_radius: 0.5
 cost_scaling_factor: 5.0
-
 observation_sources: laser_scan_sensor
-
 laser_scan_sensor:
   sensor_frame: hokuyo
   data_type: LaserScan
-  topic: /my_robot/laser/scan
+  topic: /scan
   marking: true
   clearing: true
-
